added schema for projekte

--- a/src/content/projekte/2022-08-06-Diary.md
+++ b/src/content/projekte/2022-08-06-Diary.md
@@ -4,7 +4,7 @@ card_image_alt: Screenshot von Tagebuch Webseite
 title:  "Diary"
 tags: gcp react postgresql
 demo_link: https://diaryapp.me/
-github_link: 
+github_link: https://github.com/TimonGisler/Diary
 ---
 
 Eine Spring Boot Anwendung mit React als Frontend und Postgresql als Datenbank. Die Spring Boot Anwendung wurde auf Google Cloud Run deployed, Die Postgresql Datenbank läuft auf Google Cloud Compute Engine.
