started implementing project cards

--- a/src/content/projects/2022-08-06-Diary.md
+++ b/src/content/projects/2022-08-06-Diary.md
@@ -1,4 +1,5 @@
 ---
+creation_date: 2022-08-06
 card_image_url: assets\img\projectPictures\diary.avif
 card_image_alt: Screenshot von Tagebuch Webseite
 title:  "Diary"
