--- a/src/content/projects/2020-04-17-Casino.md
+++ b/src/content/projects/2020-04-17-Casino.md
@@ -1,4 +1,5 @@
 ---
+creation_date: 2020-04-17
 card_image_url: assets\img\projectPictures\Casino.avif
 card_image_alt: Home page of Casino application
 title:  Casino
