--- a/src/content/projects/2020-09-20-Pomodoro.md
+++ b/src/content/projects/2020-09-20-Pomodoro.md
@@ -1,6 +1,6 @@
 ---
 creation_date: 2020-09-20
-card_image_url: assets\img\projectPictures\Pomodoro.avif
+card_image_url: /project-images/Pomodoro.avif
 card_image_alt: Screenshot von Pomodoro Webseite
 title:  Pomodoro
 tags: html javascript css
